# QuickerSFV

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  COPYRIGHTS  QuickerSFV.cpp  README.md
client_gui/: QuickerSFV.cpp
client_gui/quicker_sfv/ui/: command_line_parser.hpp  enforce.cpp  enforce.hpp  event_handler.hpp  file_dialog.cpp  file_dialog.hpp  operation_scheduler.cpp  operation_scheduler.hpp  plugin_support.cpp  plugin_support.hpp  resource_guard.hpp  string_helper.cpp  string_helper.hpp  user_messages.hpp
client_gui/ui/: command_line_parser.hpp  enforce.cpp  file_dialog.cpp  file_dialog.hpp  operation_scheduler.cpp  operation_scheduler.hpp  string_helper.cpp  string_helper.hpp
cmake/: coverage.cmake  quicker_sfvConfig.in
doc/: doxygen.cfg.in
lib/quicker_sfv/: checksum_file.cpp  checksum_file.hpp  checksum_provider.cpp  checksum_provider.hpp  crc32.cpp  crc32.hpp  digest.cpp  digest.hpp  error.cpp  error.hpp  file_io.cpp  file_io.hpp  hasher.cpp  hasher.hpp  line_reader.cpp  line_reader.hpp  md5.cpp  md5.hpp  md5_digest.cpp  md5_digest.hpp  md5_file.cpp  md5_file.hpp  md5_provider.cpp  md5_provider.hpp  plugin_support.cpp  plugin_support.hpp  quicker_sfv.cpp  quicker_sfv.hpp  quicker_sfv.natvis  sfv_file.cpp  sfv_file.hpp  sfv_provider.cpp  sfv_provider.hpp  string_conversion.cpp  string_conversion.hpp  string_utilities.cpp  string_utilities.hpp  utf.cpp  utf.hpp  version.cpp.in  (+1 more)
lib/quicker_sfv/detail/: crc32.cpp  crc32.hpp  md5.cpp  md5.hpp  string_conversion.cpp  string_conversion.hpp
plugin_sdk/quicker_sfv/plugin/: cpp_interfaces.hpp  interfaces.h  plugin_sdk.h  plugin_sdk.h.in
plugins/quicker_sfv/rar/: rar_plugin.cpp  rar_provider.cpp  rar_provider.hpp
plugins/quicker_sfv/sha1/: sha1_plugin.c
resource/: quicker_sfv.manifest  quicker_sfv.manifest.in  quicker_sfv.rc  resource.h
test/: checksum_file.t.cpp  crc32.t.cpp  error.t.cpp  fast_crc32.t.cpp  fuzz_crc_digest_parsing.t.cpp  fuzz_md5_digest_parsing.t.cpp  fuzz_md5_file_parsing.t.cpp  fuzz_sfv_file_parsing.t.cpp  line_reader.t.cpp  md5.t.cpp  md5_provider.t.cpp  quicker_sfv.t.cpp  sfv_provider.t.cpp  string_conversion.t.cpp  string_utilities.t.cpp  test_digest.hpp  test_file_io.hpp  utf.t.cpp  version.t.cpp
test/ui/: win32_command_line_parser.t.cpp
